--- a/JScriptSVG/BinaryA/www/index.html
+++ b/JScriptSVG/BinaryA/www/index.html
@@ -12,19 +12,9 @@
 
 <body class="mainpage">
 <div class="fullsizecontainer">
-<svg viewBox="0 0 2 1" class="visualbyte" style="background:#cccccc;" >
-<g class="bit-00"><rect x="0" y="0" width="1" height="1"></g>
-</svg>
-<svg viewBox="0 0 2 1" class="visualbyte" style="background:#cccccc;" >
-<g class="bit-00"><rect x="1" y="0" width="1" height="1"></g>
-</svg>
 <svg viewBox="0 0 2 2" class="visualbyte" style="background:#cccccc;" >
-<g class="bit-01"><rect x="1" y="1" width="2" height="1"></g>
-<g class="bit-00"><rect x="1" y="0" width="1" height="1"></g>
-</svg>
-<svg viewBox="0 0 2 2" class="visualbyte" style="background:#cccccc;" >
-<g class="bit-01"><rect x="0" y="1" width="2" height="1"></g>
-<g class="bit-00"><rect x="0" y="0" width="1" height="1"></g>
+<rect x="0" y="0" width="1" height="1"/>
+<rect x="1" y="1" width="1" height="1"/>
 </svg>
 </div>
 <p>
