Changing the position of rectangles using the y attribute.

--- a/JScriptSVG/BinaryA/www/index.html
+++ b/JScriptSVG/BinaryA/www/index.html
@@ -26,15 +26,18 @@
 
 <script>
 function addSpaceToAllBits() {	
-	var allbs = document.getElementsByTagName("b");
-	var i;
-	for (i = 0; i < allbs.length; i++) {
-    allbs[i].style = "color:green";}
-
 	var allrects = document.getElementsByTagName("rect");
 	var i;
 	for (i = 0; i < allrects.length; i++) {
-    allrects[i].style = "fill:red";}
+		allrects[i].setAttribute("y",allrects[i].getAttribute("y") + 1);
+		allrects[i].style = "fill:red";
+		
+	}
+
+	// lets keep this for control purposes
+	var allbs = document.getElementsByTagName("b");
+	var i;
+	for (i = 0; i < allbs.length; i++) { allbs[i].style = "color:green"; }
 }
 </script>
 </body>
