--- a/JScriptSVG/BinaryA/www/index.html
+++ b/JScriptSVG/BinaryA/www/index.html
@@ -12,7 +12,7 @@
 
 <body class="mainpage">
 <div class="fullsizecontainer">
-<svg viewBox="0 0 2 2" class="visualbyte" style="background:#cccccc;" >
+<svg viewBox="0 0 2 20" class="visualbyte" style="background:#cccccc;" >
 <rect id="TESTID" x="0" y="0" width="1" height="1"/>
 <rect x="1" y="1" width="1" height="1"/>
 </svg>
@@ -25,14 +25,31 @@
 </div>
 
 <script>
+function movedownRect(rect) {
+	rect.setAttribute('y', parseInt(rect.getAttribute("y"))+1);
+}
+
+
+//function mapCol(col,f) {
+//	for (i = 0; i < col.length; i++) {
+//		f(col[i]);
+//	}	
+//}
+	
 function addSpaceToAllBits() {	
 	var allrects = document.getElementsByTagName("rect");
+	var rectsarr = [];
+	for(var i = 0, n; n = allrects[i]; ++i) rectsarr.push(n);
+
 	var i;
-	for (i = 0; i < allrects.length; i++) {
-		allrects[i].setAttribute("y",allrects[i].getAttribute("y") + 1);
-		allrects[i].style = "fill:red";
-		
-	}
+	
+	while (rectsarr.length > 0) {
+		//mapCol(allrects,movedownRect);
+		rectsarr.map(movedownRect)
+
+		rectsarr.shift()
+	}	
+
 
 	// lets keep this for control purposes
 	var allbs = document.getElementsByTagName("b");
